[gd_scene load_steps=4 format=3 uid="uid://co6e7ikqgvtjv"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_6lsh7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rm4as"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lt3x3"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 0, 0, 0)
script = ExtResource("1_6lsh7")

[node name="Standing_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 2, 0)
shape = SubResource("CapsuleShape3D_rm4as")

[node name="Crouch_Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.81053, 0)
shape = SubResource("CapsuleShape3D_lt3x3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.009, 4.2, -0.706)

[node name="Eyes" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Eyes"]

[node name="IsObjectAbove" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.60821, 0)
target_position = Vector3(0, 2.405, 0)
